--- a/src/_includes/layout.html
+++ b/src/_includes/layout.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="/css/styles.css" />
-    <title>My Blog</title>
+    <title>{{ site.siteTitle }}</title>
   </head>
-  <body>
+  <body class="{{ pageClass }}">
     <nav>
       <ul>
         {% for page in collections.page %}
