--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,6 +1,6 @@
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: #333;
   font-size: 100%;
   max-width: 980px;
@@ -55,7 +55,15 @@ button {
   width: 4rem;
 }
 
-.pics .content img {
+/* .pics .content img {
   width: 60%;
   padding: 1rem;
+} */
+
+.pictures img {
+  max-width: 50%;
+}
+
+.pictures h1 {
+  color: green;
 }
