--- a/src/_includes/layout.html
+++ b/src/_includes/layout.html
@@ -10,6 +10,8 @@
   <body class="{{ pageClass }}">
     <nav>
       <ul>
+        <li><a href="/">Home</a></li>
+
         {% for page in collections.page %}
         <li>
           <a href="{{ page.url }}"> {{ page.data.navTitle }} </a>
@@ -21,5 +23,7 @@
       <h1>{{ pageTitle }}</h1>
       {{ content }}
     </div>
+
+    <script src="/js/scripts.js"></script>
   </body>
 </html>
